--- a/popup.html
+++ b/popup.html
@@ -16,6 +16,8 @@
 <h1>Twitch.tv Ad Mute</h1>
 <p>Hide ads on Twitch and display an 'Ads Playing' notice.</p>
 <button id="toggleDebug">Toggle Debug Mode</button>
+<button id="toggleMute">Toggle Tab Mute</button>
+<button id="togglePlayer">Toggle Video Player</button>
 
 <script src="popup.js"></script>
 </body>
