changes to the popup

--- a/popup.html
+++ b/popup.html
@@ -9,7 +9,7 @@
 </head>
 <body class="theme-dark">
 <header>
-    <h1>Twitch.tv Ad Mute</h1>
+    <h1>TTV Ad Mute</h1>
 </header>
 <main>
     <p>This menu is mainly for debugging purposes and troubleshooting.  If you have any issues, try reloading the webpage or enabling the domain permission for the plugin within plugin management.</p>
